welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if(d()) 
            ^ZigZag:12: error: not found: value y
		setPos(x,y)
                         ^ZigZag:19: error: type mismatch;
 found   : Unit
 required: Boolean
	if(g()) {	
            ^ZigZag:23: error: not found: value y
		setPos(x,y)
                         ^