welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var c:Int=0
	for(x<-0 to getMondeHauteur()-1) {
		setPos(x,0)
		ecritMessage(c)
		c=c+1
	}
	
	if(d()) 
	{
		for (x<-(0 to getMondeHauteur()-1).reverse) 
	{  
		setPos(x,y)
		ecritMessage(c)
		
		c=c+1
	}
	}
		
	if(g()) {	
		
		for(x<-0 to getMondeHauteur()-1)
	{
		setPos(x,y)
		ecritMessage(c)
		c=c+1
	}
	
	}
setPos(6,6)
}

def d() {
	droite()
	if (estFaceMur())
	gauche()
}

def g() {
	gauche()
	if (estFaceMur())
	droite()
}
